fixes slider overflow

--- a/src/styles/global/slider.scss
+++ b/src/styles/global/slider.scss
@@ -39,4 +39,8 @@
   &__wrapper {
     @include list-reset;
   }
+
+  @include min-desktop {
+    overflow: hidden;
+  }
 }
